--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest"
   },
   "devDependencies": {
-    "parcel": "^2.15.4"
+    "parcel": "^2.15.4",
+    "prettier": "^3.6.2"
   },
   "dependencies": {
     "react": "^19.1.1",
