--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
     "parcel": "^2.15.4",
     "prettier": "^3.6.2"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@reduxjs/toolkit": "^2.8.2",
-    "@tailwindcss/postcss": "^4.1.11",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "@reduxjs/toolkit": "^2.2.0",
+    "@stripe/react-stripe-js": "^3.9.1",
+    "@stripe/stripe-js": "^7.8.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "react-router": "^7.8.1",
-    "react-router-dom": "^6.30.1",
+    "react-router-dom": "^6.23.1",
     "react-spinners": "^0.17.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.12"
   }
 }
